--- a/mybib.bib
+++ b/mybib.bib
@@ -191,3 +191,21 @@ incollection{Witten:2011:DMP:1972514,
 	year = 1948
 }
 
+@article{Quinlan:1987:SDT:50007.50008,
+	author = {Quinlan, J. R.},
+	title = {Simplifying Decision Trees},
+	journal = {Int. J. Man-Mach. Stud.},
+	issue_date = {September 1987},
+	volume = {27},
+	number = {3},
+	month = sep,
+	year = {1987},
+	issn = {0020-7373},
+	pages = {221--234},
+	numpages = {14},
+	url = {http://dx.doi.org/10.1016/S0020-7373(87)80053-6},
+	doi = {10.1016/S0020-7373(87)80053-6},
+	acmid = {50008},
+	publisher = {Academic Press Ltd.},
+	address = {London, UK, UK},
+} 
