Data description started. Added something to reptree chapter

--- a/main-frn.tex
+++ b/main-frn.tex
@@ -13,11 +13,13 @@
 \Logo [1.5cm]{./images/logo}
 \Dipartimento {Informatica}
 \Corso [Laurea Magistrale]{Informatica}
+\Titoletto {Progetto di Intelligenza Artificiale}
 \Titolo {Confronto tra due algoritmi di apprendimento}
 \NCandidato {Esaminando}
 \Candidato [591275]{Giuseppe Rizzi}
 \NRelatore {Docente}{Docenti}
-\Relatore {Prof.~Donato Malerba}
+\Relatore {Prof.~Floriana Esposito}
+\Relatore {Prof.~Nicola Di Mauro}
 \Piede {}
 \begin {document}
 \preparefrontpagestandard
