--- a/mybib.bib
+++ b/mybib.bib
@@ -203,9 +203,25 @@ incollection{Witten:2011:DMP:1972514,
 	issn = {0020-7373},
 	pages = {221--234},
 	numpages = {14},
-	url = {http://dx.doi.org/10.1016/S0020-7373(87)80053-6},
-	doi = {10.1016/S0020-7373(87)80053-6},
 	acmid = {50008},
 	publisher = {Academic Press Ltd.},
 	address = {London, UK, UK},
-} 
+}
+
+@article{Esposito:1997:CAM:252862.252878,
+	author = {Esposito, Floriana and Malerba, Donato and Semeraro, Giovanni},
+	title = {A Comparative Analysis of Methods for Pruning Decision Trees},
+	journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+	issue_date = {May 1997},
+	volume = {19},
+	number = {5},
+	month = may,
+	year = {1997},
+	issn = {0162-8828},
+	pages = {476--491},
+	numpages = {16},
+	acmid = {252878},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+	keywords = {Decision trees, top-down induction of decision trees, simplification of decision trees, pruning and grafting operators, optimal pruning, comparative studies.},
+}
