Added reptree results. To-fix: rules layout

--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,8 @@
 \usepackage{tabu}
 \usepackage{ltxtable}
 \usepackage{pdfpages}
+\usepackage{floatpag}
+\usepackage[strict]{changepage}
 %\usepackage{tikz}
 %\usetikzlibrary{decorations,arrows,shapes}
 %\usepackage{booktabs}
