Finished results chapter. Added introduction chapter

--- a/data_description.tex
+++ b/data_description.tex
@@ -3,8 +3,8 @@
 
 Di seguito vengono descritti i 4 dataset utilizzati nella sperimentazione
 
-\section{German credit dataset}
-Il dataset contiene informazioni in ambito finanziari su clienti ritenuti a rischio o meno.
+\section{German Credit dataset}
+Il dataset contiene informazioni in ambito finanziaro su clienti ritenuti a rischio o meno.
 %\begin{table}[!htb]
 %	\centering
 %	\begin{tabular}{|r|l|}
@@ -58,7 +58,7 @@ Il dataset contiene informazioni in ambito finanziari su clienti ritenuti a risc
 
 \pagebreak 
 
-\section{Image segmentation dataset}
+\section{Image Segmentation dataset}
 
 Il dataset contiente informazioni di sette immagini all'aperto che sono state segmentate a mano. Ogni istanza rappresenta una regione 3x3.
 
@@ -113,7 +113,7 @@ Il dataset contiente informazioni di sette immagini all'aperto che sono state se
 
 \pagebreak
 
-\section{Vehicle silhouettes dataset}
+\section{Vehicle Silhouettes dataset}
 
 Il dataset contiene informazioni per discriminare le silhouette di diversi veicoli tra automobili, van e bus.
 
@@ -168,7 +168,7 @@ Il dataset contiene informazioni per discriminare le silhouette di diversi veico
 
 \pagebreak
 
-\section{Wisconsin breast cancer dataset}
+\section{Wisconsin Breast Cancer dataset}
 
 Il dataset contiene informazioni riguardo a vari casi di tumore al seno, che permettono di stabilire se esso è benigno o maligno.
 
