--- a/introduction.tex
+++ b/introduction.tex
@@ -1,1 +1,7 @@
 \chapter{Introduzione}
+
+Il seguente lavoro si propone di confrontare due algoritmi di apprendimento supervisionati, \emph{REPTree} e \emph{RIPPER}: il primo sfrutta la metodologia di costruzione di alberi di decisione, il secondo quello di costruzione di regole.
+
+Verranno testati su quattro dataset messi a disposione dall'\emph{UCI Machine Learning Repository}\footnote{\url{https://archive.ics.uci.edu/ml/datasets.html}}, procedendo con la presentazione dei risultati e dei modelli di predizione ottenuti.
+
+Il software utilizzato è \emph{Weka}\footnote{\url{http://www.cs.waikato.ac.nz/ml/weka/}}, una suite di algoritmi di \textit{machine learning}, fortemente utilizzato sia in ambito accademico che industriale.
