--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 \usepackage{pdfpages}
 \usepackage{floatpag}
 \usepackage[strict]{changepage}
+\usepackage{tabto}
 %\usepackage{tikz}
 %\usetikzlibrary{decorations,arrows,shapes}
 %\usepackage{booktabs}
